--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Welcome to my style guide! <br>
                 This site will be updated as I progress through the course, adding new sections and applying some
                 improvements. I hope you like the result and, if you want, you can leave me a feedback in the <a
-                    href="https://discuss.codecademy.com/t/build-a-website-style-guide-challenge-project-html-css/462395?_gl=1*30ywv8*_ga*MjMwMDI2ODQ5Ny4xNjgyNjAxMDEy*_ga_3LRZM6TM9L*MTY4NDc1ODIyMy4yOS4xLjE2ODQ3NTk0ODguMC4wLjA."
+                    href="https://discuss.codecademy.com/t/build-a-website-style-guide-challenge-project-html-css/462395/1006?u=shivian"
                     target="_blank">dedicated post</a> in the Codecademy forum, or you can find me in the Discord
                 server!</p>
         </header>
@@ -52,8 +52,7 @@
                     <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
                     <p>abcdefghijklmnopqrstuvwxyz</p>
                     <p>0123456789¡!$%&/()=?;: ¡“”@\</p>
-                </div>
-            </a>
+                </div></a>
             <a href="https://www.1001fonts.com/vp-pixel-font.html" target="_blank">
                 <div class="right">
                     <span>aA</span>
@@ -119,7 +118,7 @@
                     <p>Make a better layout with Flexbox and Grid</p>
                 </li>
                 <li>
-                    <p>Dark Mode! (When I'll learn Javascript...)</p>
+                    <p>Dark Mode! (When I'll learn JavaScript...)</p>
                 </li>
             </ol>
         </section>
